All games uploaded for KLama, jigsaw pending

--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Merged",
-	"short_name": "Merged",
+	"name": "SemarangGame",
+	"short_name": "SemarangGame",
 	"description": "",
 	"start_url": "index.html",
 	"display": "fullscreen",
